init example repo.